--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -2,6 +2,28 @@
 // Buttons
 // ====================================================
 
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  text-align: center;
+  margin: 0 auto;
+  max-width: 10vw;
+
+  &--letters {
+    background: var(--pulis-color-wheat);
+    color: var(--pulis-color-black);
+    transition: all ease .2s;
+
+    &:focus,
+    &:focus-visible,
+    &:hover {
+
+    }
+  }
+}
+
 .submit {
   background: wheat;
   color:black;
