--- a/assets/scss/base/_lists.scss
+++ b/assets/scss/base/_lists.scss
@@ -1,10 +1,13 @@
-/*------------------------------------*\
-    #Lists
-\*------------------------------------*/
+// ========================================================
+// Lists
+// ========================================================
 
-/**
-Remove default list styles on lists with a class name (e.g. 'nav-list')
- */
+// Remove default list styles on lists with a class name (e.g. 'nav-list')
+ol,
+ul {
+  list-style: none;
+}
+
 ol[class],
 ul[class] {
 	list-style: none;
@@ -16,7 +19,7 @@ ol:not([class]),
 ol.counter {
 	margin-block-end: 1em;
 	margin-block-start: 1em;
-	padding-inline-start: 2.4em;
+	padding-inline-start: 0;
 
 	> * + *,
 	li ul,
@@ -31,7 +34,6 @@ ol.counter {
 	}
 }
 
-
 // No bullets or numbering
 .clean-list {
 	li {
@@ -39,10 +41,7 @@ ol.counter {
 	}
 }
 
-
-/**
-Description lists / Definition lists
- */
+// Description lists / Definition lists
 dl {
 	margin-block-end: 1em;
 	margin-block-start: 1em;
@@ -83,7 +82,6 @@ dl.inline {
 }
 
 // With a grid layout for a more tabulated feel
-
 dl.grid {
 	@supports (grid-row-start: auto) {
 		column-gap: 1rem;
