--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -16,12 +16,9 @@
   color: $body-color;
 
   &:hover,
-  &:focus {
-    color: var(--pulis-wheat);
+  &:focus,
+  &:focus-visible {
+    color: var(--pulis-color-wheat);
     text-decoration: underline;
   }
-}
-
-:focus-visible {
-  outline: 1px solid var(--pulis-wheat);
 }
