--- a/assets/scss/layouts/_footer.scss
+++ b/assets/scss/layouts/_footer.scss
@@ -18,7 +18,7 @@
 
 .footer__title {
   color: var(--pulis-wheat);
-  font-size: rem(20);
+  font-size: toRem(20);
   padding-bottom: var(--pulis-block-spacing-horizontal);
 }
 
