--- a/assets/scss/components/_help.scss
+++ b/assets/scss/components/_help.scss
@@ -7,7 +7,7 @@
   color: var(--pulis-color-black);
   padding: 16px;
   background: #f6f6f6;
-  margin-bottom: rem(16);
+  margin-bottom: toRem(16);
   transition: background .35s ease-out;
 }
 
