--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,6 +10,7 @@
 
 // Base
 @import "base/body";
+@import "base/buttons";
 // @import "base/lists";
 
 // Components
@@ -17,7 +18,6 @@
 @import "components/home-blog";
 @import "components/help";
 @import "components/comments";
-@import "components/button";
 @import "components/card";
 @import "components/navigation";
 @import "components/newsletter";
