--- a/assets/scss/components/_newsletter.scss
+++ b/assets/scss/components/_newsletter.scss
@@ -2,6 +2,11 @@
 // Newsletter
 // ====================================================
 
+.newsletter {
+  background: var(--pulis-color-grey);
+  height: 335px;
+}
+
 .c-newsletter {
   border-top: 2px solid #ccc;
   border-bottom: 2px solid #ccc;
