--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -8,6 +8,7 @@
   --transition: all ease-in .3s;
   --pulis-color-tiny-blue: #6096ba;
   --pulis-color-orange: #ea9010;
+  --pulis-color-orange-light: #EF980E;
   --bs-body-bg: var(--pulis-color-white);
   --pulis-font-family-roboto: Roboto;
   --pulis-font-style-normal: normal;
@@ -24,17 +25,18 @@
   --pulis-block-spacing-vertical: 1rem;
   --pulis-block-spacing-horizontal: 1rem;
   --pulis-card-background-color: #181c25;
-  --pulis-border-radius: 0.25rem;
+  --pulis-border-radius: 8px;
   --pulis-box-shadow: 0.0145rem 0.029rem 0.174rem rgba(7, 9, 12, 0.01698), 0.0335rem 0.067rem 0.402rem rgba(7, 9, 12, 0.024), 0.0625rem 0.125rem 0.75rem rgba(7, 9, 12, 0.03), 0.1125rem 0.225rem 1.35rem rgba(7, 9, 12, 0.036), 0.2085rem 0.417rem 2.502rem rgba(7, 9, 12, 0.04302), 0.5rem 1rem 6rem rgba(7, 9, 12, 0.06), 0 0 0 0.0625rem rgba(7, 9, 12, 0.015);
   --pulis-card-box-shadow: var(--pulis-box-shadow);
   --pulis-typography-spacing-vertical: 1rem;
-  --facebook: #3b5998;
-  --instagram: #405de6;
+  
+  --instagram: #e1306c;
   --linkedin: #0077b5;
-  --pinterest: #bd081c;
   --twitter: #1da1f2;
   --whatsapp: #25d366;
+  --mastodon: #2C90DC;
   --youtube: #ff0000;
+  --rss: #E99010;
 }
 
 
@@ -100,10 +102,4 @@ $error-color:                   #a82615;
 
 /// Social media colours that might be useful.
 /// @see https://brandcolors.net/
-$facebook: #3b5998;
-$instagram: #405de6;
-$linkedin: #0077b5;
-$pinterest: #bd081c;
-$twitter: #1da1f2;
-$whatsapp: #25d366;
-$youtube: #ff0000;
+
